[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
crossbeam = "0.8"
num-complex = { version = "0.4", features = ["std"] }
rustfft = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
log = "0.4"
env_logger = "0.11"
